force-app/main/default/objects/Activity/fields/Voice_URL__c.field-meta.xml
<CustomField>
    <fullName>Voice_URL__c</fullName>
    <label>Ses Kaydı</label>
    <type>Url</type>
</CustomField>